<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activites.IncomeExpenseActivity">

        <TextView
            android:id="@+id/lblScreenName"
            android:text="TEMP"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:gravity="center" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtAmount"
                android:ems="15"
                android:hint="Amount"
                android:imeActionLabel="hl"
                android:inputType="numberDecimal"
                android:maxLength="20"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:gravity="center" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtDescription"
                android:ems="15"
                android:hint="Description"
                android:imeActionLabel="hl"
                android:inputType="text"
                android:maxLength="20"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--<Account/Category for Income/Expense Screens>-->
        <TextView
            android:id="@+id/lblLabel1"
            android:text="Account:"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center" />

        <Spinner
            android:id="@+id/spinnerAccount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:gravity="center" />

        <TextView
            android:id="@+id/lblLabel2"
            android:text="Category:"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:gravity="center"  />
        <!--</ Account/Category for Income/Expense Screens>-->

        <!--<From/To Account for Account Transfer Screen>-->
        <TextView
            android:id="@+id/lblLabel3"
            android:text="From Account:"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center" />

        <Spinner
            android:id="@+id/spinnerFromAccount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:gravity="center" />

        <TextView
            android:id="@+id/lblLabel4"
            android:text="To Account:"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center" />

        <Spinner
            android:id="@+id/spinnerToAccount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:gravity="center"  />
        <!--</ From/To Account for Account Transfer Screen>-->

        <!--<From/To Account for Account Transfer Screen>-->
        <TextView
            android:id="@+id/lblLabel5"
            android:text="From Category:"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center" />

        <Spinner
            android:id="@+id/spinnerFromCategory"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:gravity="center" />

        <TextView
            android:id="@+id/lblLabel6"
            android:text="To Category:"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center" />

        <Spinner
            android:id="@+id/spinnerToCategory"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:gravity="center"  />
        <!--</ From/To Account for Account Transfer Screen>-->

        <Button
            android:id="@+id/btnSelectDate"
            android:width="200dp"
            android:text="Select Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:gravity="center" />

        <TextView
            android:id="@+id/lblDate"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:layout_marginBottom="0dp"
            android:progress="25"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:gravity="center" />

        <Button
            android:id="@+id/btnSubmit"
            android:text="Submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:gravity="center" />

    </LinearLayout>

</ScrollView>
